# clicksign-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: gen-resource.md  release.md  sync-spec.md
.claude/skills/run-clicksign-python-sdk/: SKILL.md  smoke.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
docs/: ARCHITECTURE.md  CONSIDERACOES.md  OBSERVABILITY.md  PAGINATION.md  README.md  RELEASE.md  SDK_CONTRACT.md  SDK_ROADMAP.md  SDK_TEST_MATRIX.md  SPEC.md  TROUBLESHOOTING.md  TYPES.md  WORKFLOW.md
docs/cookbook/: 01-retries.md  02-bulk-requirements.md  03-webhooks.md  04-multi-client.md  07-list-and-filter.md  08-production-limitations.md  11-observability-metrics.md  README.md
docs/examples/: 02-bulk-requirements.md  03-webhooks.md  04-multi-client.md  07-list-and-filter.md  08-production-limitations.md  09-observability-structlog.md  10-observability-opentelemetry.md  11-observability-metrics.md  12-http-connection-pool.md  13-async-fastapi.md  README.md
scripts/: generate_resource_types.py  resource_type_spec.json
scripts/sandbox/: .env.example  01_list_collections.py  02_create_notarial_draft.py  03_consult_envelope.py  04_activate_optional.py  README.md  _config.py
src/clicksign/: __init__.py  api_error.py  app_info.py  async_bound_resource.py  async_bridge.py  async_clicksign_client.py  async_client.py  async_http_executor.py  async_resource.py  bound_resource.py  clicksign_client.py  client.py  client_scope.py  configuration.py  error_handler.py  errors.py  http_executor.py  http_transport.py  instrumentation.py  log.py  pagination.py  provider_telemetry.py  raw_response.py  request_headers.py  request_instrumentation.py  request_options.py  resource.py  response_metadata.py  retry_backoff.py  services.py  user_agent.py  version.py  webhook.py
src/clicksign/_async/: bound_resource.py  bridge.py  clicksign_client.py  client.py  http_executor.py  resource.py
src/clicksign/_http/: executor.py  headers.py  transport.py
src/clicksign/json_api/: bulk_operations_client.py  included.py  operations.py  parser.py  query_builder.py  resource_registry.py  serializer.py
src/clicksign/resources/: __init__.py  access_control_list.py  envelope_bulk_creation.py  event.py  folder.py  group.py  membership.py  template.py  template_field.py  user.py  webhook.py
src/clicksign/resources/acceptance_term/: whatsapp.py
src/clicksign/resources/auto_signature/: term.py
src/clicksign/resources/notarial/: __init__.py  bulk_requirement.py  document.py  envelope.py  event.py  requirement.py  signature_watcher.py  signer.py
src/clicksign/types/: __init__.py  _attrs.py  resources.py
tests/: conftest.py
tests/clicksign/: test_async_bound_resource.py  test_async_bridge.py  test_async_clicksign_client.py  test_async_client.py  test_async_http_executor.py  test_async_pagination.py  test_bound_resource.py  test_bulk_operations_client.py  test_clicksign_client.py  test_client.py  test_configuration.py  test_error_handler.py  test_errors.py  test_http_transport.py  test_httpx_async_transport.py  test_httpx_transport.py  test_included.py  test_instrumentation.py  test_json_api_operations.py  test_json_api_parser.py  test_json_api_serializer.py  test_last_response.py  test_log.py  test_pagination.py  test_provider_telemetry.py  test_query_builder.py  test_raw_request.py  test_request_options.py  test_resource.py  test_retry_backoff.py  test_root_exports.py  test_services.py  test_structured_errors.py  test_types.py  test_types_attrs.py  test_user_agent.py  test_version.py  test_webhook.py
tests/clicksign/resources/: test_acceptance_term.py  test_access_control_list.py  test_auto_signature.py  test_envelope_bulk_creation.py  test_event.py  test_folder.py  test_group.py  test_membership.py  test_not_implemented.py  test_template.py  test_user.py  test_webhook_resource.py
tests/clicksign/resources/notarial/: test_bulk_requirement.py  test_document.py  test_envelope.py  test_requirement.py  test_signature_watcher.py  test_signer.py
tests/support/: fake_async_http_client.py  fake_http_client.py  http_mock.py  json_api_fixtures.py
