[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clicksign-python-sdk"
dynamic = ["version"]
description = "Official Python SDK for the Clicksign e-signature API (v3)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/djosino/clicksign-python-sdk"
Documentation = "https://github.com/djosino/clicksign-python-sdk/tree/main/docs"
Repository = "https://github.com/djosino/clicksign-python-sdk"
Changelog = "https://github.com/djosino/clicksign-python-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
    "typing_extensions>=4.0",
    "httpx>=0.27",
]
httpx = ["httpx>=0.27"]
async = ["httpx>=0.27"]

[tool.hatch.version]
path = "REVISION"
pattern = "^(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/clicksign"]

[tool.hatch.build.targets.sdist]
only-include = [
  "src/clicksign",
  "REVISION",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
files = [
    "src/clicksign/types",
    "src/clicksign/resource.py",
    "src/clicksign/bound_resource.py",
    "src/clicksign/client_scope.py",
    "src/clicksign/_http/transport.py",
    "src/clicksign/_async/bound_resource.py",
    "src/clicksign/json_api/bulk_operations_client.py",
    "src/clicksign/resources/envelope_bulk_creation.py",
    "src/clicksign/resources/auto_signature/term.py",
    "src/clicksign/resources/acceptance_term/whatsapp.py",
    "src/clicksign/resources/notarial/envelope.py",
    "src/clicksign/resources/notarial/document.py",
    "src/clicksign/resources/notarial/signer.py",
    "src/clicksign/resources/notarial/requirement.py",
    "src/clicksign/resources/notarial/signature_watcher.py",
    "src/clicksign/resources/notarial/event.py",
    "src/clicksign/resources/webhook.py",
    "src/clicksign/resources/folder.py",
    "src/clicksign/resources/user.py",
    "src/clicksign/resources/template.py",
    "src/clicksign/resources/template_field.py",
    "src/clicksign/resources/membership.py",
    "src/clicksign/resources/group.py",
]
